feat: implement registration email events and refine outfit/tag management